@@ -2180,8 +2180,12 @@ cert_csrwarn=Warning - a signing request in $1 and private key in $2 already exi
 cert_keywarn=Warning - a certificate in $1 and private key in $2 already exist, and will be over-written by generating a new key.
 cert_header1=Generate CSR and private key
 cert_csrok=Generate CSR Now
+cert_alt=Other domain names
+cert_esconf=Virtualmin could not find the <tt>openssl.cnf</tt> file on your system, which is needed when generating a certificate that contains additional domain names
+cert_ealt=Invalid other domain name : $1
 cert_header2=Current SSL certificate details
 cert_cn=Web server hostname
+cert_alt=Alternate hostnames
 cert_ccn=Certificate authority name
 cert_o=Organization
 cert_city=City or locality
